Enhance training feedback animation

--- a/web/index.html
+++ b/web/index.html
@@ -191,6 +191,19 @@
             outline: none;
         }
 
+        .token-tape {
+            min-height: 28px;
+            border: 1px solid black;
+            background: repeating-linear-gradient(
+                90deg,
+                #f3f3f3,
+                #f3f3f3 8px,
+                #ffffff 8px,
+                #ffffff 16px
+            );
+            letter-spacing: 0.08em;
+        }
+
         .trace-window {
             transition: transform 0.2s ease, opacity 0.2s ease;
             transform: translateY(0);
@@ -275,6 +288,13 @@
                                 <p>Type: Adam</p>
                                 <p>Rate: 0.05</p>
                             </div>
+                        </div>
+                        <div class="border border-black p-2 text-xs bg-white space-y-2">
+                            <p class="font-bold">Live Token Feedback</p>
+                            <p>Context: <span id="contextChar" class="code-font">N/A</span> -> Target: <span id="targetChar" class="code-font">N/A</span></p>
+                            <p>Model Guess: <span id="predictedChar" class="code-font">N/A</span> (p=<span id="predictedProb">0.0000</span>)</p>
+                            <p>Target Confidence: <span id="targetProb">0.0000</span></p>
+                            <div id="tokenTape" class="token-tape code-font flex items-center px-2 text-sm">-</div>
                         </div>
                     </div>
                 </section>
