Enhance training confidence colors

--- a/web/index.html
+++ b/web/index.html
@@ -219,6 +219,18 @@
         .confidence-value {
             font-weight: bold;
         }
+
+        .confidence-high {
+            color: #0a7a0a !important;
+        }
+
+        .confidence-mid {
+            color: #b58900 !important;
+        }
+
+        .confidence-low {
+            color: #b00020 !important;
+        }
     </style>
 </head>
 <body>
