Add primitive feedback support

--- a/web/index.html
+++ b/web/index.html
@@ -325,6 +325,10 @@
                             <button id="generateBtn" class="mac-button py-4 text-lg">Generate</button>
                             <button id="traceBtn" class="mac-button py-4 text-lg">Explain Choice: Off</button>
                         </div>
+                        <div class="w-full grid grid-cols-2 gap-2">
+                            <button id="feedbackUpBtn" class="mac-button">+ Useful</button>
+                            <button id="feedbackDownBtn" class="mac-button">- Unhelpful</button>
+                        </div>
                         <p class="text-[10px] text-center italic mt-4">The model predicts the next character based on training patterns.</p>
                     </div>
                 </section>
