Clarify docs vocabulary and flow

--- a/web/index.html
+++ b/web/index.html
@@ -270,9 +270,9 @@
                             <button data-topic="Attention" class="mac-button explain-btn">About Attention</button>
                             <button data-topic="Go Backend" class="mac-button explain-btn">About Go Backend</button>
                         </div>
-                        <div id="explanationBox" class="border border-black p-3 text-xs bg-slate-50 mt-4">
+                        <div id="explanationBox" class="border border-black p-4 text-sm bg-slate-50 mt-4">
                             <p class="font-bold mb-1">Guide Explanation:</p>
-                            <div id="explanationText" class="text-[11px] leading-snug whitespace-pre-line"></div>
+                            <div id="explanationText" class="text-[14px] leading-snug whitespace-pre-line"></div>
                         </div>
                     </div>
                 </section>
